src/app/components/blog-area/blog-area.component.scss
@import '../../../assets/styles/mixins';
@import '../../../assets/styles/variables';

.blog {
  @include tablet-min-portrait {
    padding-top: 150px;
  }
}

h2 {
  @include h2();
  margin-top: 60px;
  margin-bottom: 10px;

  @include tablet-min-portrait {
    @include h2-desktop();
  }
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: 70px;
  grid-auto-rows: auto;
  margin-top: 10px;
  margin-bottom: 40px;
  @include tablet-min-portrait {
    grid-template-columns: repeat(3, 1fr);
    margin-top: 40px;
  }

  img {
    max-width: 100%;
    margin-bottom: 15px;
    @include tablet-min-portrait {
      margin-bottom: 20px;
    }
  }
}

h3 {
  @include h3();
  @include h3-desktop();
  margin-bottom: 10px;

  @include tablet-min-portrait {
    font-size: 33px;
    line-height: 1.1;
    margin-bottom: 15px;
  }
}

.blog-date {
  font-family: 'Calibre-Regular';
  font-size: 17px;
  line-height: 1.67;
  color: $orange;
  @include desktop-only {
    font-size: 23px;
    line-height: 1.3;
  }
}

.block-btn {
  text-align: center;

  button {
    font-size: 17px;
    font-weight: bold;
    color: $white;
    background-color: $orange;
    border-radius: 30px;
    padding: 12px 40px;
    @include mobile-only {
      width: 100%;
    }
  }
}

